# libadsc

./: .clang-format  .gitignore  CMakeLists.txt  README.md
adsc/: CMakeLists.txt
adsc/include/: ads_algo.h  ads_alloc.h  ads_func.h  ads_list.h  ads_vec.h
adsc/source/: algo.c  alloc.c  lists.c
cmake/: setup_target.cmake
docs/: config.conf  extra_style.css
include/: ads.h  ads_alloc.h  ads_base.h  ads_dlist.h  ads_internal.h  ads_list.h  adsc.h  adsc_alloc.h  adsc_base.h  adsc_func.h  adsc_internal.h  adsc_lists.h  adsc_vec.h
source/: algo.c  alloc.c  lists.c  static.c  vec.c
tests/: CMakeLists.txt  alloc.c  list.c  lists.c  main.c  run.sh  test_suite.c  test_suite.h  vec.c
tests/include/: test_suite.h
tests/source/: alloc.c  list.c  main.c  test_suite.c
